--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,4 +1,23 @@
+.main {
+  .Humzi {
+    width: 100%;
+    position: relative;
+    margin-top: -20px;
+    z-index: 100;
+  }
 
-.title {
-  background: rgb(242, 127, 121);
+  .kGYGSu {
+    background-image: url(https://gw.alicdn.com/tfs/TB1vMMwChTpK1RjSZFMXXbG_VXa-1125-30.png);
+    height: 10px;
+    width: 100%;
+    background-size: 100%;
+    margin-bottom: -2px;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  img {
+    display: inline-block;
+    width: 100%;
+  }
 }
