--- a/src/pages/home/SearchInput/index.less
+++ b/src/pages/home/SearchInput/index.less
@@ -1,8 +1,11 @@
 .main {
   padding: 6px;
   background-color: #ff852a;
+
   .fakeInput {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     @size: 28px;
     height: @size;
