--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,10 +1,34 @@
 ul,
 li {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+// antd default
+:global {
+  #root {
+    .red {
+      color: red;
+    }
+
+    .bold {
+      font-weight: bold;
+    }
+
+    .font14 {
+      font-size: 14px;
+    }
+
+    .am-card {
+      min-height: 0;
+    }
+  }
 }
 
 .main {
   background: white;
+
   article {
     min-height: 100%;
   }
