加入购物车

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,8 +1,13 @@
 ul,
-li {
+li,
+p {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+a {
+  color: rgb(136, 136, 136);
 }
 
 // antd default
