在写确认订单页面

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -17,16 +17,39 @@ a {
       color: red;
     }
 
+    .hidden {
+      visibility: hidden;
+    }
+
     .bold {
       font-weight: bold;
+    }
+
+    .font12 {
+      font-size: 12px;
     }
 
     .font14 {
       font-size: 14px;
     }
 
+    .font16 {
+      font-size: 16px;
+    }
+
+    .space10 {
+      margin-right: 10px;
+    }
+
+    .xyCenter {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     .am-card {
       min-height: 0;
+      padding: 12px;
     }
   }
 }
