--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -47,6 +47,14 @@ a {
       justify-content: center;
     }
 
+    .txtCenter {
+      text-align: center;
+    }
+
+    .flexNone {
+      flex: none;
+    }
+
     .am-card {
       min-height: 0;
       padding: 12px;
@@ -59,6 +67,7 @@ a {
 
   article {
     min-height: 100%;
+    padding-bottom: 50px;
   }
 
   footer {
