--- a/src/pages/user/Header/index.less
+++ b/src/pages/user/Header/index.less
@@ -1,4 +1,5 @@
 .main {
+  margin-bottom: 10px;
   .header {
     background: linear-gradient(90deg, #dd9b4c, #ffd787);
     box-shadow: 0 2px 5px #f8e3c6;
