--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -59,6 +59,13 @@ a {
       min-height: 0;
       padding: 12px;
     }
+
+    .am-tabs-tab-bar-wrap {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
   }
 }
 
