--- a/src/pages/cart/PayBar/index.less
+++ b/src/pages/cart/PayBar/index.less
@@ -14,9 +14,14 @@
   .btn {
     font-size: 14px;
     width: 80px;
-    line-height: 36px;
+    line-height: 28px;
     height: 36px;
-    // background: red;
+    margin-right: 14px;
+    background: red;
+    color: white;
     border: none;
+    padding: 4px;
+    text-align: center;
+    border-radius: 16px;
   }
 }
