--- a/src/pages/search/SearchInput/index.less
+++ b/src/pages/search/SearchInput/index.less
@@ -1,6 +1,6 @@
 .main {
   position: relative;
-  padding: 6px 66px 6px 6px;
+  padding: 6px 66px 6px 6px !important;
   background-color: #e3e3e5;
 
   .searchBar {
