mock login logout

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,4 +1,14 @@
+.main {
+  height: 100%;
+  padding-top: 100px;
+  background: white;
 
-.title {
-  background: rgb(242, 169, 121);
+  .logo {
+    background: url(https://gw.alicdn.com/tfs/TB1p.BGQXXXXXbFXFXXXXXXXXXX-160-160.png)
+      no-repeat;
+    background-size: contain;
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
+  }
 }
