--- a/src/pages/search/SearchInput/index.less
+++ b/src/pages/search/SearchInput/index.less
@@ -14,8 +14,9 @@
     border-radius: 4px;
     text-align: left;
 
+    input,
     ::-webkit-input-placeholder {
-      text-align: center;
+      // text-align: center;
       font-size: 13px;
     }
 
