--- a/src/pages/confirmBill/PayBar/index.less
+++ b/src/pages/confirmBill/PayBar/index.less
@@ -1,12 +1,12 @@
 .main {
   .payBar {
     z-index: 2;
-
     position: fixed !important;
     bottom: 0;
     left: 0;
     right: 0;
     display: flex;
+    height: 50px;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
