--- a/src/pages/product/Carousel/index.less
+++ b/src/pages/product/Carousel/index.less
@@ -2,9 +2,11 @@
   .carouselItem {
     display: inline-block;
     width: 100%;
+    height: 300px;
     padding-bottom: 10px;
+
     img {
-      width: 100%;
+      height: 300px;
       vertical-align: top;
     }
   }
