--- a/src/pages/product/CartAndBuy/index.less
+++ b/src/pages/product/CartAndBuy/index.less
@@ -6,6 +6,7 @@
   right: 0;
   height: 50px;
   border-top: 1px solid #ddd;
+  background: white;
 
   .cart {
     width: 66px;
@@ -16,6 +17,7 @@
 
     a {
       display: inline-block;
+      margin-top: 4px;
     }
 
     .title {
