--- a/src/pages/cart/PayBar/index.less
+++ b/src/pages/cart/PayBar/index.less
@@ -16,7 +16,7 @@
     font-size: 14px;
     line-height: 28px;
     height: 36px;
-    margin-right: 14px;
+    // margin-right: 14px;
     background: red;
     color: white;
     border: none;
