--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -84,6 +84,18 @@ a {
       left: 0;
       right: 0;
     }
+
+    .am-list-item {
+      padding-left: 0;
+
+      .am-list-line {
+        padding-right: 0;
+      }
+
+      .am-stepper-input {
+        width: 34px;
+      }
+    }
   }
 }
 
