--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -10,6 +10,12 @@ a {
   color: rgb(136, 136, 136);
 }
 
+input,
+::-webkit-input-placeholder {
+  // text-align: center;
+  font-size: 13px;
+}
+
 // antd default
 :global {
   #root {
