--- a/src/components/PayModal/index.less
+++ b/src/components/PayModal/index.less
@@ -1,13 +1,12 @@
 .main {
-  display: flex;
+  .auth {
+    justify-content: space-between !important;
 
-  .no {
-    cursor: pointer;
-  }
-
-  .input {
-    width: 30px;
-    margin: 0 4px;
-    text-align: center;
+    .authBtn {
+      height: 34px;
+      line-height: 30px;
+      font-size: 12px;
+      padding: 4px;
+    }
   }
 }
