--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -64,6 +64,20 @@ input,
       flex: none;
     }
 
+    .oneRow {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      height: 20px;
+      word-break: break-all;
+      margin: 4px 4px;
+      font-weight: bold;
+      font-size: 12px;
+      color: #333333;
+    }
+
     .twoRows {
       overflow: hidden;
       text-overflow: ellipsis;
@@ -72,7 +86,7 @@ input,
       -webkit-box-orient: vertical;
       height: 38px;
       word-break: break-all;
-      margin: 8px 0;
+      margin: 8px 4px;
       line-height: 1.36;
       font-weight: bold;
       font-size: 14px;
@@ -114,6 +128,7 @@ input,
   }
 
   footer {
+    z-index: 2;
     position: fixed;
     bottom: 0;
     left: 0;
