--- a/src/components/Tags/index.less
+++ b/src/components/Tags/index.less
@@ -2,7 +2,8 @@
   width: 100%;
   display: flex;
   .tag {
-    margin-right: 4px;
+    margin-right: 8px;
+    padding: 0 16px;
     background: #eee;
   }
 }
