--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -13,7 +13,7 @@ a {
 input,
 ::-webkit-input-placeholder {
   // text-align: center;
-  font-size: 13px;
+  font-size: 26px;
 }
 
 // antd default
@@ -35,25 +35,28 @@ input,
     }
 
     .font12 {
-      font-size: 12px;
+      font-size: 24px;
     }
 
     .font14 {
-      font-size: 14px;
+      font-size: 28px;
     }
 
     .font16 {
-      font-size: 16px;
+      font-size: 32px;
     }
 
     .space10 {
-      margin-right: 10px;
+      margin-right: 20px;
     }
 
     .xyCenter {
       display: flex;
       align-items: center;
       justify-content: center;
+      > a {
+        text-align: center;
+      }
     }
 
     .txtCenter {
@@ -70,11 +73,11 @@ input,
       display: -webkit-box;
       -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
-      height: 20px;
+      height: 40px;
       word-break: break-all;
-      margin: 4px 4px;
+      margin: 8px;
       font-weight: bold;
-      font-size: 12px;
+      font-size: 24px;
       color: #333333;
     }
 
@@ -84,18 +87,18 @@ input,
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
-      height: 38px;
+      height: 76px;
       word-break: break-all;
-      margin: 8px 4px;
+      margin: 16px 8px;
       line-height: 1.36;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 28px;
       color: #333333;
     }
 
     .am-card {
       min-height: 0;
-      padding: 12px;
+      padding: 24px;
     }
 
     .am-tabs-tab-bar-wrap {
@@ -113,7 +116,7 @@ input,
       }
 
       .am-stepper-input {
-        width: 34px;
+        width: 68px;
       }
     }
   }
@@ -124,7 +127,7 @@ input,
 
   article {
     min-height: 100%;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
   }
 
   footer {
@@ -146,7 +149,7 @@ input,
     }
 
     #tab-bar .demoName {
-      height: 40px;
+      height: 80px;
     }
 
     #tab-bar .demo-preview-item .am-tab-bar {
