--- a/src/pages/product/CartAndBuy/index.less
+++ b/src/pages/product/CartAndBuy/index.less
@@ -4,25 +4,25 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 50px;
+  height: 100px;
   border-top: 1px solid #ddd;
   background: white;
 
   .cart {
-    width: 66px;
-    font-size: 10px;
-    margin: 3px 0 0 0;
+    width: 132px;
+    font-size: 20px;
+    margin: p6x 0 0 0;
     line-height: 1;
     text-align: center;
 
     a {
       display: inline-block;
-      margin-top: 4px;
+      margin-top: 8px;
     }
 
     .title {
       color: rgb(136, 136, 136);
-      margin: 6px 0 0;
+      margin: 12px 0 0;
     }
   }
 
@@ -36,8 +36,8 @@
 
   .btn {
     width: 50%;
-    line-height: 50px;
-    font-size: 14px;
+    line-height: 100px;
+    font-size: 28px;
     color: white;
     text-align: center;
   }
