--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,3 +1,7 @@
+body {
+  color: #333333;
+}
+
 ul,
 li,
 p {
@@ -54,6 +58,7 @@ input,
       display: flex;
       align-items: center;
       justify-content: center;
+
       > a {
         text-align: center;
       }
