--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,3 +1,14 @@
-.title {
-  background: rgb(182, 242, 121);
+.main {
+  height: 100%;
+  padding-top: 200px;
+  background: white;
+
+  .logo {
+    background: url(https://gw.alicdn.com/tfs/TB1p.BGQXXXXXbFXFXXXXXXXXXX-160-160.png)
+      no-repeat;
+    background-size: contain;
+    width: 160px;
+    height: 160px;
+    margin: 0 auto;
+  }
 }
