ls 9 购物车页面

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -93,6 +93,7 @@ input,
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
+      white-space: break-spaces;
       height: 76px;
       word-break: break-all;
       margin: 16px 8px;
